--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: light # [light|dark]
 img_cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/겨울이.jpg "/commons/avatar.jpg"
+avatar: /assets/img/hi.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
