--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "./assets/img/winter.jpg"
+avatar: "./assets/img/IMG_7245.jpg"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
