Modify: 블로그 설명, 서브타이틀 수정

--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ timezone: Asia/Seoul
 
 title: tgkim # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: 성실하게 꾸준하게 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  태균이의 공부기록
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://taegyuni.github.io"
 
@@ -37,7 +37,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: tgkim
-  email: example@domain.com # change to your email address
+  email: taegyun7553@naver.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/taegyuni # change to your twitter homepage
